# ffado

./: .cvsignore  AUTHORS  AmdtpPort.cpp  AmdtpPort.h  AmdtpPortInfo.cpp  AmdtpPortInfo.h  AmdtpSlaveStreamProcessor.cpp  AmdtpStreamProcessor.cpp  AmdtpStreamProcessor.h  ChangeLog  DelayLockedLoop.cpp  DelayLockedLoop.h  FreebobAtomic.h  FreebobPosixThread.cpp  FreebobPosixThread.h  FreebobThread.h  IsoHandler.cpp  IsoHandler.h  IsoHandlerManager.cpp  IsoHandlerManager.h  IsoStream.cpp  IsoStream.h  IsoStreamManager.cpp  Makefile.am  MotuPort.cpp  MotuPort.h  MotuPortInfo.cpp  MotuPortInfo.h  MotuStreamProcessor.cpp  MotuStreamProcessor.h  OptionContainer.cpp  PacketBuffer.cpp  Port.cpp  Port.h  PortManager.cpp  PortManager.h  PosixThread.cpp  PosixThread.h  README  Receiver.cpp  (+33 more)
alsa-plugin/: .cvsignore  ChangeLog  Makefile.am  README  configure.in
alsa-plugin/freebob/: Makefile.am  pcm_freebob.c
freebob/: Makefile.am  README  configure.ac
freebob/doc/: README  fbcp.xml  freebob.xmi
freebob/src/: Makefile.am  avaudioinfoblock.cpp  avaudioinfoblock.h  avaudiosubunitidentifierdescriptor.cpp  avaudiosubunitidentifierdescriptor.h  avaudiosyncinfoblock.cpp  avaudiosyncinfoblock.h  avclusterinfoblock.cpp  avclusterinfoblock.h  avdescriptor.cpp  avdescriptor.h  avdevice.cpp  avdevice.h  avdeviceaudiosubunit.cpp  avdeviceaudiosubunit.h  avdevicemusicsubunit.cpp  avdevicemusicsubunit.h  avdevicepool.cpp  avdevicepool.h  avdevicesubunit.cpp  avdevicesubunit.h  avgeneralmusicstatusinfoblock.cpp  avgeneralmusicstatusinfoblock.h  avinfoblock.cpp  avinfoblock.h  avmidiinfoblock.cpp  avmidiinfoblock.h  avmusicidentifierdescriptor.cpp  avmusicidentifierdescriptor.h  avmusicpluginfoblock.cpp  avmusicpluginfoblock.h  avmusicstatusdescriptor.cpp  avmusicstatusdescriptor.h  avnameinfoblock.cpp  avnameinfoblock.h  avoutputplugstatusinfoblock.cpp  avoutputplugstatusinfoblock.h  avpluginfoblock.cpp  avpluginfoblock.h  avroutingstatusinfoblock.cpp  (+29 more)
freebob/tests/: Makefile.am  avc_definitions.cpp  avc_definitions.h  avc_extended_stream_format.cpp  avc_extended_stream_format.h  avc_generic.cpp  avc_generic.h  avc_plug_info.cpp  avc_plug_info.h  avc_signal_source.cpp  avc_signal_source.h  byte_order.c  convert.h  csr1212_read.c  detect_avc_unit.c  get-xml-description.c  serialize.cpp  serialize.h  stream_format.c  stream_format.cpp  sync_mode.cpp  test-freebob-audio.c  test-freebob-bounce.c  test-freebob-iso.c  test-freebob-midi.c  test-freebob-synctransfer.c  test_debug_module.cpp
libffado/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  SConscript  SConstruct  config.h.in  config_debug.h.in  configuration  configure.ac  ffado.h  freebob_streaming.h  libffado.pc.in  version.h.in
libffado/admin/: dbus.py  doxygen.py  pkgconfig.py  scanreplace.py
libffado/deb/: SConscript
libffado/doc/: SConscript  amdtpstreamprocessor.dox  motu_firewire_protocol-mk3.txt  motu_firewire_protocol.txt  reference.doxygen.in  streaming.xmi
libffado/libffado/: .gitignore  60-ffado.rules  SConscript  ffado.h  ffado.h.in
libffado/libfreebob/: Makefile.am
libffado/src/: .gitignore  DeviceStringParser.cpp  DeviceStringParser.h  Makefile.am  SConscript  bebob-sync.cpp  devicemanager.cpp  devicemanager.h  fbtypes.h  ffado.cpp  ffadodevice.cpp  ffadodevice.h  ffadotypes.h  freebob-downloader.cpp  iavdevice.h  ser.cpp  threads.h
libffado/support/: SConscript
libffado/tests/: .gitignore  Makefile.am  SConscript  SytMonitor.cpp  control-interface.xml  controlclient.cpp  controlclient.h  controlserver.cpp  controlserver.h  dumpiso_mod.cpp  scan-devreg.cpp  set-default-router-config-dice-eap.cpp  test-avccmd.cpp  test-bufferops.cpp  test-cycle-time.c  test-cycletimer.cpp  test-dbus-server.cpp  test-devicestringparser.cpp  test-dice-eap.cpp  test-echo.cpp  test-echomixer.cpp  test-enhanced-mixer.cpp  test-extplugcmd.cpp  test-ffado.cpp  test-focusrite.cpp  test-fw410.cpp  test-ieee1394service.cpp  test-ipcringbuffer.cpp  test-messagequeue.cpp  test-pan.cpp  test-scs.cpp  test-shm.cpp  test-streamdump.cpp  test-timestampedbuffer.cpp  test-volume.cpp  test-watchdog.cpp  unmute-ozonic.cpp
libfreebob/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  config.h.in  configure.ac  freebob.h  freebob_bounce.h  freebob_streaming.h  libfreebob.pc.in  xmlparser.h
libfreebob/libfreebob/: Makefile.am  freebob.h  xmlparser.h
libfreebob/src/: Makefile.am  avdevice.cpp  avdevice.h  avdevicesubunit.cpp  avdevicesubunit.h  avdevicexml.cpp  avplug.cpp  avplug.h  avplugxml.cpp  configrom.cpp  configrom.h  devicemanager.cpp  devicemanager.h  fbtypes.h  freebob-downloader.cpp  freebob.cpp  functionblock.h  iavdevice.h  ser.cpp  threads.h  xmlparser.c
libfreebob/tests/: Makefile.am  freebob-server.c  test-cyclecounter.cpp  test-freebob.c  (+4 more)
src/: .cvsignore  DeviceStringParser.cpp  DeviceStringParser.h  Makefile.am  SConscript  avdevice.cpp  avdevice.h  avdevicesubunit.cpp  avdevicesubunit.h  avdevicexml.cpp  avplug.cpp  avplug.h  bebob-sync.cpp  bridgeco-downloader.cpp  configrom.cpp  configrom.h  csr1212.c  devicemanager.cpp  devicemanager.h  fbtypes.h  ffado.cpp  ffado_streaming.cpp  ffadodevice.cpp  ffadodevice.h  freebob-downloader.cpp  freebob-interface.cpp  freebob-interface.h  freebob-sync.cpp  freebob.cpp  freebob_streaming.cpp  functionblock.cpp  functionblock.h  iavdevice.cpp  iavdevice.h  ser.cpp  threads.h  xmlparser.c
tests/: .cvsignore  Makefile.am  SConscript  SytMonitor.cpp  SytMonitor.h  control-interface.xml  controlclient.cpp  controlclient.h  controlserver.cpp  dbus_test.py  dumpiso_mod.cpp  freebob-server.c  scan-devreg.cpp  test-avccmd.cpp  test-bufferops.cpp  test-cycletimer.cpp  test-dbus-server.cpp  test-dbus.cpp  test-echo.cpp  test-echomixer.cpp  test-enhanced-mixer.cpp  test-extplugcmd.cpp  test-ffado.cpp  test-focusrite.cpp  test-freebob-cpp.cpp  test-freebob.c  test-freebob.cpp  test-fw410.cpp  test-ieee1394service.cpp  test-ipcringbuffer.cpp  test-messagequeue.cpp  test-mixer.cpp  test-streamdump.cpp  test-sytmonitor.cpp  test-timestampedbuffer.cpp  test-volume.cpp  test-watchdog.cpp
(+1419 files in other folders)
